--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <Div id="contenidos">
 	<header>
 		<h1>HTML5 PRUEBA 3</h1>
+		<h6>este es un Cambio</h6>
 		<h2>Curso Diseño de Sitios web</h2>
 		<h3>hola jeralsoft</h3>
 		<h3>cambiossssssss</h3>
